Fix: menu front-css - small css fixes (*) Better menu button left/right alignment (*) Better first/last menu item alignment (padding) (*) Better sidenav nav margin-top consistency in both resp and not resp modes.

--- a/inc/assets/less/tc_custom.less
+++ b/inc/assets/less/tc_custom.less
@@ -922,17 +922,17 @@ li.dropdown.active>.dropdown-toggle, .navbar .nav li.dropdown.open.active>.dropd
   }
 }
 /* ADJUST LEFT AND RIGHT MENU POSITIONS => align with socials (left) and tagline (right) */
-.logo-left .navbar div>ul.nav>.menu-item:last-child>a {
-  padding-right: 0;
-}
 .navbar .nav {
   margin-right: 0px;
 }
-
-.logo-right .navbar div>ul.nav>.menu-item:first-child>a {
+.tc-header .btn-toggle-nav.pull-left,
+.pull-menu-left .navbar div>ul.nav>.menu-item:first-child>a {
   padding-left: 5px;
 }
-
+.tc-header .btn-toggle-nav.pull-right,
+.pull-menu-right .navbar div>ul.nav>.menu-item:last-child>a {
+  padding-right: 0px;
+}
 .pull-menu-left .nav-collapse{
   float: left
 }
@@ -1079,8 +1079,9 @@ style when side nav visible is actually rendered inline TC_menu.tc_set_sidenav_s
   outline-offset: inherit;
   background: none;
 }
-#tc-sn .tc-sn-inner.nav-collapse .nav{
+#tc-sn .tc-sn-inner.nav-collapse .nav {
   display: block;
+  margin-top: 10px;
 }
 
 .sn-nav-wrapper {
@@ -1115,7 +1116,7 @@ style when side nav visible is actually rendered inline TC_menu.tc_set_sidenav_s
 .nav .dropdown-menu a {
   color: #777;
 }
-.navbar div > ul.nav > .menu-item:first-child > a {
+.navbar div > ul.sn-nav > .menu-item:first-child > a {
   padding-left: 20px;
 }
 
